Add the sidebar to the main area

--- a/style/index.css
+++ b/style/index.css
@@ -16,6 +16,10 @@
   bottom: 0;
 }
 
+.jp-Debugger .p-SplitPanel-handle {
+  background-color: var(--jp-border-color2);
+}
+
 /* font awesome */
 
 .fa {
