--- a/packages/logconsole-extension/style/base.css
+++ b/packages/logconsole-extension/style/base.css
@@ -1,10 +1,7 @@
-:root [data-jp-theme-light='true'] {
-  --jp-icon-output-console: url('./list-icon-light.svg');
-}
-
-:root [data-jp-theme-light='false'] {
-  --jp-icon-output-console: url('./list-icon-dark.svg');
-}
+/*-----------------------------------------------------------------------------
+| Copyright (c) Jupyter Development Team.
+| Distributed under the terms of the Modified BSD License.
+|----------------------------------------------------------------------------*/
 
 .jp-LogConsoleIcon {
   background-image: var(--jp-icon-output-console);
@@ -23,18 +20,18 @@
   }
 }
 
-.jp-LogConsoleStatusItem.hilite {
+.jp-LogConsoleStatusItem.jp-LogConsole-flash {
   animation: flash 300ms both;
 }
 
-.jp-LogConsoleStatusItem.hilited {
+.jp-LogConsoleStatusItem.jp-mod-selected {
   background-color: var(--jp-brand-color1);
 }
 
 /* Need to be very specific to override the typestyle styles on status bar components */
-.jp-LogConsoleStatusItem.hilited,
-.jp-LogConsoleStatusItem.hilited div,
-.jp-LogConsoleStatusItem.hilited div span {
+.jp-LogConsoleStatusItem.jp-mod-selected,
+.jp-LogConsoleStatusItem.jp-mod-selected div,
+.jp-LogConsoleStatusItem.jp-mod-selected div span {
   color: white;
 }
 
