--- a/dev_mode/templates/template.html
+++ b/dev_mode/templates/template.html
@@ -8,33 +8,7 @@
 </head>
 <body>
 
-<script type="text/javascript">
-  /* Remove token from URL. */
-  (function () {
-    var location = window.location;
-    var search = location.search;
-
-    // If there is no query string, bail.
-    if (search.length <= 1) {
-      return;
-    }
-
-    // Rebuild the query string without the `token`.
-    var query = '?' + search.slice(1).split('&')
-      .filter(function (param) { return param.split('=')[0] !== 'token'; })
-      .join('&');
-
-    // Rebuild the URL with the new query string.
-    var url = location.origin + location.pathname +
-      (query !== '?' ? query : '') + location.hash;
-
-    if (url === location.href) {
-      return;
-    }
-
-    window.history.replaceState({ }, '', url);
-  })();
-</script>
+<%= require('html-loader!./insert-body.html') %>
 
 </body>
 </html>
