Add prompt colors and tooltips for log severity.

--- a/packages/logconsole/style/base.css
+++ b/packages/logconsole/style/base.css
@@ -18,6 +18,26 @@
   padding: 2px;
 }
 
+.jp-LogConsolePanel .jp-OutputArea-prompt[data-log-level='info'] {
+  background-color: var(--jp-info-color1);
+  color: var(--jp-ui-inverse-font-color1);
+}
+
+.jp-LogConsolePanel .jp-OutputArea-prompt[data-log-level='warning'] {
+  background-color: var(--jp-warn-color1);
+  color: var(--jp-ui-inverse-font-color1);
+}
+
+.jp-LogConsolePanel .jp-OutputArea-prompt[data-log-level='error'] {
+  background-color: var(--jp-error-color1);
+  color: var(--jp-ui-inverse-font-color1);
+}
+
+.jp-LogConsolePanel .jp-OutputArea-prompt[data-log-level='critical'] {
+  background-color: var(--jp-error-color0);
+  color: var(--jp-ui-inverse-font-color0);
+}
+
 .jp-LogConsoleListPlaceholder {
   padding: 5px;
   font-size: 13px;
