--- a/packages/celltags/style/base.css
+++ b/packages/celltags/style/base.css
@@ -42,25 +42,35 @@
   align-items: center;
 }
 
-.check-icon {
+.icon {
   display: inline-block;
   height: 18px;
   min-width: 18px;
-  background-image: url('../static/check-24px.svg');
   background-size: 18px;
+}
+
+.check-icon {
+  background-image: url('../static/check-24px.svg');
   margin-left: 5px;
   margin-right: -3px;
 }
 
 .add-icon {
-  display: inline-block;
-  height: 18px;
-  min-width: 18px;
   background-image: url('../static/add-24px.svg');
-  background-size: 18px;
   margin-left: 3px;
   margin-right: -5px;
-  fill: var(--jp-ui-font-color2);
+}
+
+.check-icon-dark {
+  background-image: url('../static/check-24px-dark.svg');
+  margin-left: 5px;
+  margin-right: -3px;
+}
+
+.add-icon-dark {
+  background-image: url('../static/add-24px-dark.svg');
+  margin-left: 3px;
+  margin-right: -5px;
 }
 
 .tag-hover {
