Hide callstack buttons labels

--- a/style/callstack.css
+++ b/style/callstack.css
@@ -21,3 +21,7 @@
   color: white;
   background: var(--jp-brand-color1);
 }
+
+.jp-DebuggerCallstack .jp-ToolbarButtonComponent-label {
+  display: none;
+}
