add filter obj and add Demo Data
Set breakpoints via the service

Convert to source breakpoint in the service

Filter breakpoints with the same line numbers

Pass this to disconnect

Rename onNewCell to onActiveCellChanged

Ensure session is ready

Use changed signal for models

add hover method for breakpoints

hover gutter by only css

fixed issue with variablesreference 0 and foreach in service

Use source path for the breakpoints view

Rebase DisplayClassVariable branch

--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -9,11 +9,25 @@
 
 .jp-breakpoint-marker {
   position: absolute;
-  left: -35px;
+  left: -34px;
   top: -1px;
   color: var(--jp-error-color1);
 }
 
 .jp-breakpoint-line-highlight {
   background-color: var(--jp-warn-color0);
+}
+
+.CodeMirror-gutter-wrapper::after {
+  content: '●';
+  color: var(--jp-error-color1);
+  opacity: 0;
+  position: absolute;
+  left: 3px;
+  top: -1px;
+}
+
+.jp-CodeCell.jp-mod-selected .CodeMirror-gutter-wrapper:hover::after,
+.jp-Editor.jp-mod-focused .CodeMirror-gutter-wrapper:hover::after {
+  opacity: 0.5;
 }
