resolve hover issue in console and editor error

--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -28,6 +28,8 @@
 }
 
 .jp-CodeCell.jp-mod-selected .CodeMirror-gutter-wrapper:hover::after,
-.jp-Editor.jp-mod-focused .CodeMirror-gutter-wrapper:hover::after {
+.jp-Editor.jp-mod-focused
+  .CodeMirror:not(.jp-mod-readOnly)
+  .CodeMirror-gutter-wrapper:hover::after {
   opacity: 0.5;
 }
