fix dropdown option style issue in Windows

--- a/packages/ui-components/style/base.css
+++ b/packages/ui-components/style/base.css
@@ -104,8 +104,9 @@ input::placeholder {
   color: var(--jp-ui-font-color0);
 }
 
-/* Use our own theme for hover styles */
-.jp-HTMLSelect.bp3-html-select.bp3-minimal select:hover {
+/* Use our own theme for hover and option styles */
+.jp-HTMLSelect.bp3-html-select.bp3-minimal select:hover,
+.jp-HTMLSelect.bp3-html-select.bp3-minimal select > option {
   color: var(--jp-ui-font-color0);
   background-color: var(--jp-layout-color2);
 }
