change input box with circle content

--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -8,8 +8,15 @@
 }
 
 .jp-DebuggerBreakpoints-body .breakpoint span::before {
+  font-size: 20px;
+  padding-right: 5px;
   content: '●';
-  color: var(--jp-ui-font-color1);
+  color: var(--jp-error-color1);
+}
+
+.jp-DebuggerBreakpoints-body .breakpoint span {
+  display: flex;
+  align-items: center;
 }
 
 .jp-breakpoint-marker {
