--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -30,7 +30,7 @@
   background-color: var(--jp-warn-color0);
 }
 
-.CodeMirror-gutter-wrapper::after {
+[data-jp-debugger='true'] .CodeMirror-gutter-wrapper::after {
   content: '●';
   color: var(--jp-error-color1);
   opacity: 0;
@@ -39,9 +39,15 @@
   top: -1px;
 }
 
-.jp-Notebook
+[data-jp-debugger='true']
+  .jp-Notebook
   .jp-CodeCell.jp-mod-selected
   .CodeMirror-gutter-wrapper:hover::after,
-.jp-Editor .CodeMirror-gutter-wrapper:hover::after {
+[data-jp-debugger='true'] .jp-Editor .CodeMirror-gutter-wrapper:hover::after {
+  opacity: 0.5;
+}
+
+[data-jp-debugger='true'].jp-DebuggerEditors
+  .CodeMirror-gutter-wrapper:hover::after {
   opacity: 0.5;
 }
