Allow setting breakpoints in out-of-focus cells

--- a/style/breakpoints.css
+++ b/style/breakpoints.css
@@ -40,11 +40,8 @@
 }
 
 .jp-Notebook
-  .jp-mod-editMode
   .jp-CodeCell.jp-mod-selected
   .CodeMirror-gutter-wrapper:hover::after,
-.jp-Editor.jp-mod-focused
-  .CodeMirror:not(.jp-mod-readOnly)
-  .CodeMirror-gutter-wrapper:hover::after {
+.jp-Editor .CodeMirror-gutter-wrapper:hover::after {
   opacity: 0.5;
 }
