--- a/style/index.css
+++ b/style/index.css
@@ -8,6 +8,7 @@
 
 @import './icons.css';
 @import './sidebar.css';
+@import './sources.css';
 
 .jp-Debugger {
   background: var(--jp-layout-color1);
