--- a/packages/celltags/style/index.css
+++ b/packages/celltags/style/index.css
@@ -9,5 +9,6 @@
 @import url('~@jupyterlab/application/style/index.css');
 @import url('~@jupyterlab/cells/style/index.css');
 @import url('~@jupyterlab/notebook/style/index.css');
+@import url('~@phosphor/widgets/style/index.css');
 
 @import url('./base.css');
