Make search options grey if disabled

--- a/packages/documentsearch/style/base.css
+++ b/packages/documentsearch/style/base.css
@@ -184,6 +184,9 @@
   width: 200px;
   display: block;
 }
+.jp-DocumentSearch-search-options-disabled {
+  color: var(--jp-ui-font-color2);
+}
 
 .jp-DocumentSearch-search-options input {
   float: right;
