--- a/packages/nbconvert-css/raw.css
+++ b/packages/nbconvert-css/raw.css
@@ -3,6 +3,7 @@
 | Distributed under the terms of the Modified BSD License.
 |----------------------------------------------------------------------------*/
 
+@import url('~@jupyterlab/application/style/scrollbar.css');
 @import url('~@jupyterlab/apputils/style/index.css');
 @import url('~@jupyterlab/cells/style/index.css');
 @import url('~@jupyterlab/codemirror/style/index.css');
