Use the tree resolver as an optional dependency to populate the default file browser.

--- a/packages/filebrowser-extension/style/index.css
+++ b/packages/filebrowser-extension/style/index.css
@@ -4,3 +4,7 @@
 |----------------------------------------------------------------------------*/
 
 @import url('~@jupyterlab/filebrowser/style/index.css');
+
+#filebrowser.jp-mod-restoring .jp-DirListing-content {
+  display: none;
+}
