cleaned up/annotated migrated icon svgs

--- a/packages/ui-components/style/deprecated.css
+++ b/packages/ui-components/style/deprecated.css
@@ -12,25 +12,31 @@
 /* Icons urls */
 
 :root {
+  --jp-icon-console: url('icons/filetype/console.svg');
   --jp-icon-file: url('icons/filetype/file.svg');
   --jp-icon-folder: url('icons/filetype/folder.svg');
   --jp-icon-html5: url('icons/filetype/html5.svg');
   --jp-icon-image: url('icons/filetype/image.svg');
   --jp-icon-json: url('icons/filetype/json.svg');
+  --jp-icon-keyboard: url('icons/filetype/keyboard.svg');
+  --jp-icon-launcher: url('icons/filetype/launcher.svg');
   --jp-icon-markdown: url('icons/filetype/markdown.svg');
   --jp-icon-notebook: url('icons/filetype/notebook.svg');
   --jp-icon-python: url('icons/filetype/python.svg');
   --jp-icon-r-kernel: url('icons/filetype/r-kernel.svg');
   --jp-icon-react: url('icons/filetype/react.svg');
+  --jp-icon-settings: url('icons/filetype/settings.svg');
   --jp-icon-spreadsheet: url('icons/filetype/spreadsheet.svg');
   --jp-icon-text-editor: url('icons/filetype/text-editor.svg');
+  --jp-icon-vega: url('icons/filetype/vega.svg');
   --jp-icon-yaml: url('icons/filetype/yaml.svg');
+  --jp-icon-jupyter-favicon: url('icons/jupyter/jupyter-favicon.svg');
+  --jp-icon-jupyter: url('icons/jupyter/jupyter.svg');
   --jp-icon-build: url('icons/sidebar/build.svg');
   --jp-icon-extension: url('icons/sidebar/extension.svg');
   --jp-icon-palette: url('icons/sidebar/palette.svg');
   --jp-icon-running: url('icons/sidebar/running.svg');
   --jp-icon-tab: url('icons/sidebar/tab.svg');
-  --jp-icon-jupyter-favicon: url('icons/splash/jupyter-favicon.svg');
   --jp-icon-kernel: url('icons/statusbar/kernel.svg');
   --jp-icon-line-form: url('icons/statusbar/line-form.svg');
   --jp-icon-list: url('icons/statusbar/list.svg');
@@ -41,15 +47,22 @@
   --jp-icon-check: url('icons/toolbar/check.svg');
   --jp-icon-copy: url('icons/toolbar/copy.svg');
   --jp-icon-cut: url('icons/toolbar/cut.svg');
+  --jp-icon-file-upload: url('icons/toolbar/file-upload.svg');
+  --jp-icon-filter-list: url('icons/toolbar/filter-list.svg');
+  --jp-icon-new-folder: url('icons/toolbar/new-folder.svg');
   --jp-icon-paste: url('icons/toolbar/paste.svg');
   --jp-icon-refresh: url('icons/toolbar/refresh.svg');
   --jp-icon-run: url('icons/toolbar/run.svg');
   --jp-icon-save: url('icons/toolbar/save.svg');
+  --jp-icon-search: url('icons/toolbar/search.svg');
   --jp-icon-stop: url('icons/toolbar/stop.svg');
 }
 
 /* Icon CSS class declarations */
 
+.jp-ConsoleIcon {
+  background-image: var(--jp-icon-console);
+}
 .jp-FileIcon {
   background-image: var(--jp-icon-file);
 }
@@ -64,6 +77,12 @@
 }
 .jp-JsonIcon {
   background-image: var(--jp-icon-json);
+}
+.jp-KeyboardIcon {
+  background-image: var(--jp-icon-keyboard);
+}
+.jp-LauncherIcon {
+  background-image: var(--jp-icon-launcher);
 }
 .jp-MarkdownIcon {
   background-image: var(--jp-icon-markdown);
@@ -80,14 +99,26 @@
 .jp-ReactIcon {
   background-image: var(--jp-icon-react);
 }
+.jp-SettingsIcon {
+  background-image: var(--jp-icon-settings);
+}
 .jp-SpreadsheetIcon {
   background-image: var(--jp-icon-spreadsheet);
 }
 .jp-TextEditorIcon {
   background-image: var(--jp-icon-text-editor);
 }
+.jp-VegaIcon {
+  background-image: var(--jp-icon-vega);
+}
 .jp-YamlIcon {
   background-image: var(--jp-icon-yaml);
+}
+.jp-JupyterFaviconIcon {
+  background-image: var(--jp-icon-jupyter-favicon);
+}
+.jp-JupyterIcon {
+  background-image: var(--jp-icon-jupyter);
 }
 .jp-BuildIcon {
   background-image: var(--jp-icon-build);
@@ -103,9 +134,6 @@
 }
 .jp-TabIcon {
   background-image: var(--jp-icon-tab);
-}
-.jp-JupyterFaviconIcon {
-  background-image: var(--jp-icon-jupyter-favicon);
 }
 .jp-KernelIcon {
   background-image: var(--jp-icon-kernel);
@@ -137,6 +165,15 @@
 .jp-CutIcon {
   background-image: var(--jp-icon-cut);
 }
+.jp-FileUploadIcon {
+  background-image: var(--jp-icon-file-upload);
+}
+.jp-FilterListIcon {
+  background-image: var(--jp-icon-filter-list);
+}
+.jp-NewFolderIcon {
+  background-image: var(--jp-icon-new-folder);
+}
 .jp-PasteIcon {
   background-image: var(--jp-icon-paste);
 }
@@ -148,6 +185,9 @@
 }
 .jp-SaveIcon {
   background-image: var(--jp-icon-save);
+}
+.jp-SearchIcon {
+  background-image: var(--jp-icon-search);
 }
 .jp-StopIcon {
   background-image: var(--jp-icon-stop);
