--- a/packages/application/style/menus.css
+++ b/packages/application/style/menus.css
@@ -142,7 +142,7 @@
 }
 
 .p-Menu-item[data-type='submenu'] > .p-Menu-itemSubmenuIcon {
-  background-image: var(--jp-icon-caretright);
+  background-image: var(--jp-icon-caret-right);
   background-size: 18px;
   background-repeat: no-repeat;
   background-position: left;
